--- a/notification/app/src/main/res/values/strings.xml
+++ b/notification/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Noti</string>
+
+    <!--  notification  -->
+    <string name="channel_name">노티 이름</string>
+    <string name="channel_description">노티 설명</string>
 </resources>
